# foundry-mcp

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  HARDENING_PLAN.md  Makefile  NEXT.md  OPERATIONS_TO_ADD.md  PLAN-BG-CHECKLIST.md  PLAN-BG.md  PLAN-CHECKLIST-1.md  PLAN-CHECKLIST-2.md  PLAN-CHECKLIST-3.md  PLAN-CHECKLIST-4.md  PLAN-CHECKLIST-5.md  PLAN-CHECKLIST-6.md  PLAN-CHECKLIST-7.md  PLAN-CHECKLIST-8.md  PLAN-CHECKLIST.md  PLAN-remove-features.md  PLAN.md  PLAN1-CHECKLIST.md  PLAN1.md  PLAN2-CHECKLIST.md  PLAN2.md  PLANFIX-CHECKLIST.md  PLANFIX.md  PLAN_1.md  PLAN_2.md  PLAN_3.md  PLAN_4.md  PLAN_5.md  PLAN_6.md  PLAN_7.md  PLAN_8.md  PLAN_DECOMPOSE_DEEP_RESEARCH.md  (+9 more)
.github/workflows/: lint.yml  publish-alpha.yml  publish-beta.yml
_research/: DECISIONS.md  PLAN-EXECUTION-CHECKLIST.md  PLAN.md  TASKS.md  autonomous-phase-looping-primitive-2026-02-16.md  autonomous-posture-hardening-2026-02-16.md  foundry-implement-v2-SKILL.md  foundry-implement-v2-research-2026-02-16.md  proof-receipt-gap-analysis-2026-02-16.md
dev_docs/: configuration.md
dev_docs/architecture/: adr-001-cli-architecture.md  adr-002-autonomous-spec-execution.md
dev_docs/cli_best_practices/: 01-cli-runtime.md
dev_docs/codebase_standards/: cli-output.md  mcp_response_schema.md  naming-conventions.md
dev_docs/guides/: config-reference.md  deep-research.md  development-guide.md  model-token-limits.md  observability.md  testing.md
dev_docs/mcp_best_practices/: 06-pagination-streaming.md  07-error-semantics.md
dev_docs/refactoring/: DEEP_RESEARCH_STATUS_VISIBILITY_PLAN.md  baseline.md  import_consumer_audit.md
docs/: 02-core-concepts.md  04-cli-command-reference.md  05-mcp-tool-reference.md  06-configuration.md  07-troubleshooting.md  README.md  TESTING.md  cli_parity_matrix.md  codebase.json
docs/architecture/: cli_release_readiness.md  sdd_cli_runtime.md
docs/codebase_standards/: mcp_response_schema.md  naming-conventions.md
docs/concepts/: foundry-philosophy.md  sdd-philosophy.md  spec-schema.md
docs/guides/: autonomy-agent-isolation.md  autonomy-supervisor-runbook.md  development-guide.md  intake.md  llm-configuration.md
docs/mcp_best_practices/: README.md
docs/reference/: error-codes.md
future/: PLAN-0-PREREQUISITES.md  PLAN-1-FOUNDATIONS.md  PLAN-2-ACADEMIC-TOOLS.md  PLAN-3-RESEARCH-INTELLIGENCE.md  PLAN-4-DEEP-ANALYSIS.md  PLAN-PROVIDERS-CHECKLIST.md  PLAN-PROVIDERS.md  PLAN-TIER1-CHECKLIST.md  PLAN-TIER1.md  PLAN-TIER2-CHECKLIST.md  PLAN-TIER2.md  PLAN-TIER3-CHECKLIST.md  PLAN-TIER3.md  README.md
half_baked_plans/: OPERATIONS_TO_ADD.md
mcp/: capabilities_manifest.json
samples/: foundry-mcp-reference.toml  foundry-mcp.toml  home-foundry-mcp.toml
scripts/: guard_autonomous_bash.py  guard_autonomous_write.py
skills/foundry-implement-auto/: SKILL.md
skills/foundry-implement-v2/: SKILL.md
specs/.backups/: foundry-mcp-2025-01-25-001.backup
specs/.plan-reviews/: PLAN-remove-features-quick.md
specs/.plans/: autonomous-spec-execution.md  autonomy-boundary-hardening.md  autonomy-session-observability-dx.md  deep-research-cpu-optimization.md  deep-research-token-management-synthesis.md  deep-research-token-management.md  notes-intake.md  remove-mcp-tools-pr-code-test.md  ruff-pyright-ci.md  unified-refactoring.md
specs/active/: ai-consultation-layer-2025-12-03-001.json  cli-provider-abstraction-2025-11-30-001.json  deep-research-cpu-optimization-2026-01-26-001.json  (+14 more)
tests/: conftest.py  test_cli_verbosity.py  test_doc_query_verbosity.py  test_responses.py  test_sdd_update_tasks_verbosity.py  test_support_verbosity.py  test_verbosity_regression.py
tmp/: PLAN-remove-features-review.md
(+777 files in other folders)
