[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry-mcp"
version = "0.2.0"
description = "MCP server for SDD toolkit spec management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tyler Burleigh" }
]
keywords = ["mcp", "sdd", "specification", "spec-driven-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "jsonschema>=4.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
foundry-mcp = "foundry_mcp.server:main"

[project.urls]
Homepage = "https://github.com/tylerburleigh/foundry-mcp"
Repository = "https://github.com/tylerburleigh/foundry-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry_mcp"]
